# receipt-processing-api

./: """Audit prompts for receipt processing.  .env  Dockerfile  EVALUATION_README.md  OPENAI_EVALS_INTEGRATION.md  README.md  docker-compose.yml  pyproject.toml  receipt_inspection.ipynb  requirements.txt  run_server.py
scripts/: __init__.py  cost_example.py  generate_dataset.py  get_eval_data.py  notebook_eval.py  run_eval.py  selected_cell.py  selected_cell_run.py
scripts/data/: evaluation_dataset.jsonl
scripts/data/evaluation_results/: Q1 Business Review_20250720_212214.json  real-receipts-eval-20-samples_20250721_014501.json
scripts/data/train/: _annotations.coco_cleaned.json
src/: cli.py  main.py
src/api/: dependencies.py
src/api/endpoints/: health.py  receipts.py
src/api/middleware/: error_handler.py
src/core/: config.py  logging.py
src/models/: audit.py  receipt.py
src/prompts/: audit_prompt.py  audit_prompts.py  extraction_prompt.py  grader_prompts.py
src/services/: audit.py  cost_analysis.py  evaluation_pipeline.py  extraction.py  get_agent_context.md
src/utils/: cost_calculator.py  graders.py  image_processing.py
tests/: conftest.py  test_api.py  test_audit.py  test_extraction.py
